# Resume-Site

./: .gitignore  comment.js  index.js  package-lock.json  package.json
APCS2017Minesweeper/: .classpath  .project
client/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
client/app/: layout.tsx  page.tsx  template.tsx
client/blogPosts/: Post1.md  about.md
client/components/: .LandingLayout.js.swp  AboutMe.js  AboutMe.tsx  Education.js  Interests.js  LandingLayout.js  LandingLayout.tsx  Login_Signup.js  Research.js  Sidebar.tsx  SvgAnimate.tsx  blogInput.js  layout.js  layout.module.css  layout.tsx  paths.ts  projectGrid.js  scrollMenu.tsx
client/firebase_setup/: firebase.js
client/lib/: descriptions.js  posts.js
client/pages/: FreelanceForm.js  FreelanceServices.js  FreelanceServices.tsx  Projects.js  (+10 more)
components/: DescriptionComponent.js  layout.js  layout.module.css  projectGrid.js
lib/: descriptions.js  posts.js
pages/: Blog.js  Minesweeper.js  Projects.js  _app.js  comment.js  index.js
posts/: contact.md  minesweeper.md
projectDescriptions/: minesweeper.md
server/: Cargo.toml  app.js  package-lock.json  package.json  schema.sql
server/config/: mongoCollections.js  mongoConnection.js
server/data/: blog.js  index.js  users.js  wordPressBlog.js
server/migrations/: schema.sql
server/routes/: blogRoutes.js  index.js
server/src/: comment.rs  lib.rs  main.rs  post.rs  user.rs
server/src/posts/: mod.rs
server/src/repo/: mod.rs
server/src/users/: mod.rs
styles/: global.css  utils.module.css
(+73 files in other folders)
