[package]
name = "brummer-resume-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"
serde = "1.0.148"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = {version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = "1.26.0"
shuttle-aws-rds = { version = "0.38.0", features = ["postgres"] }
env_logger = "0.11.1"
serde_json = "1.0.113"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
chrono = "0.4.34"
aw = "0.1.0"
awc = "3.4.0"
reqwest = { version = "0.12.2", features = ["json"] }
actix-cors = "0.7.0"
